--- a/nivell1/index.html
+++ b/nivell1/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container-flex">
         <!-- Header -->
-        <div class="row d-flex flex-wrap justify-content-center py-4 nopadding">
+        <div class="row justify-content-center py-4 nopadding">
           <header class="col col-lg-9 d-flex flex-wrap justify-content-between justify-content-lg-center">
               <a class="navbar-brand d-flex align-items-center me-md-auto" href="#">
                   <img src="img/logo-bookmark.svg" alt="logo bookmark">
@@ -36,10 +36,10 @@
         </div>
 
         <!-- Hero -->
-        <div class="row d-flex flex-wrap justify-content-center nopadding py-5 ms-4 ms-lg-5 ps-lg-5">
+        <div class="row justify-content-center nopadding py-5 ms-4 ms-lg-5 ps-lg-5">
           <div class="col">
             <div class="row flex-lg-row-reverse align-items-center g-5 ps-lg-5">
-              <div class="col-10 col-lg-7 img-overlap img-hero">
+              <div class="col-12 col-lg-7 img-overlap img-hero">
                 <img src="img/pill.svg" class="img-move img-right img-bottom img-fluid" loading="lazy" role="presentation">
                 <img src="img/illustration-hero.svg" class="img-move img-left img-fluid" alt="Bootstrap Themes" loading="lazy">           
               </div>
@@ -47,8 +47,8 @@
                 <h1 class="fw-bolder fs-1 lh-2 mb-4">A Simple Bookmark Manager</h1>
                 <p class="mb-4 text-black-50 pe-lg-4">A clean and simple interface to organize your favorite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <div class="d-block gap-3 d-flex justify-content-center justify-content-lg-start">
-                  <button type="button" class="btn btn-primary btn-shadow btn-lg py-2">Get in on Chrome</button>
-                  <button type="button" class="btn btn-light btn-shadow btn-lg py-2">Get in on Firefox</button>
+                  <button type="button" class="btn btn-primary button-size btn-shadow btn-lg py-2">Get in on Chrome</button>
+                  <button type="button" class="btn btn-light button-size btn-shadow btn-lg py-2">Get in on Firefox</button>
                 </div>
               </div>
             </div>
@@ -56,74 +56,47 @@
         </div>
 
         <!-- Features -->
-        <div class="row d-flex flex-wrap justify-content-center py-5">
+        <div class="row justify-content-center py-5">
           <div class="col-12 col-lg-9">
-            <div class="row row-cols-1 d-flex flex-wrap justify-content-center">
+            <div class="row row-cols-1 justify-content-center">
               <div class="col col-lg-7 p-5 text-center">
                 <h2 class="fw-bolder pb-2">Features</h2>
                 <p class="mb-4 text-black-50">Our aim is to make it quickly and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-9 ps-3">
-            <ul class="nav nav-tabs d-flex flex-wrap justify-content-center mx-4" id="myTab" role="tablist">
-                  <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
-                    <button class="nav-link active p-4" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Simple Bookmarking</button>
-                  </li>
-                  <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
-                    <button class="nav-link p-4" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Speedy Searching</button>
-                  </li>
-                  <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
-                    <button class="nav-link p-4" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Easy Sharing</button>
-                  </li>
-            </ul>
-          </div>
-                <div class="col-12 pt-5 pe-lg-5 tab-content" id="myTabContent">
-                  <!-- Content 1 -->
-                  <div class="row d-flex tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                    <div class="col-12 col-lg-6 d-flex flex-wrap justify-content-center img-overlap img-tab">
-                      <img src="img/pill.svg" class="img-move img-left img-bottom img-fluid rotated" loading="lazy" role="presentation">
-                      <img src="img/illustration-features-tab-1.svg" class="img-move w-75" alt="Browser Bookmark" loading="lazy">           
-                    </div>
-                    <div class="col-12 col-lg-6 pt-4 px-lg-4 text-center text-lg-start">
-                      <h3 class="fw-bolder fs-2 lh-1 mb-4">Bookmark in one click</h3>
-                      <p class="mb-4 text-black-50 pe-lg-4">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
-                      <button type="button" class="btn btn-primary btn-lg btn-shadow py-2">More Info</button>
-                    </div>
-                  </div>
-                
-                  <!-- Content 2 -->            
-                  <div class="row d-flex tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-                    <div class="col-12 col-lg-6 d-flex flex-wrap justify-content-center img-overlap img-tab">
-                      <img src="img/pill.svg" class="img-move img-left img-bottom img-fluid rotated" loading="lazy" role="presentation">
-                      <img src="img/illustration-features-tab-2.svg" class="img-move w-75" alt="Browser Bookmark" loading="lazy">           
-                    </div>
-                    <div class="col-12 col-lg-6 pt-4 px-lg-4 text-center text-lg-start">
-                      <h3 class="fw-bolder fs-2 lh-1 mb-4">Intelligent Searching</h3>
-                      <p class="mb-4 text-black-50 pe-lg-4">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
-                      <button type="button" class="btn btn-primary btn-lg btn-shadow py-2">More Info</button>
-                    </div>
-                  </div>
 
-                  <!-- Content 3 -->            
-                  <div class="row d-flex tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-                    <div class="col-12 col-lg-6 d-flex flex-wrap justify-content-center img-overlap img-tab">
-                      <img src="img/pill.svg" class="img-move img-left img-bottom img-fluid rotated" loading="lazy" role="presentation">
-                      <img src="img/illustration-features-tab-3.svg" class="img-move w-75" alt="Browser Bookmark" loading="lazy">           
-                    </div>
-                    <div class="col-12 col-lg-6 pt-4 px-lg-4 text-center text-lg-start">
-                      <h3 class="fw-bolder fs-2 lh-1 mb-4">Intelligent Searching</h3>
-                      <p class="mb-4 text-black-50 pe-lg-4">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
-                      <button type="button" class="btn btn-primary btn-lg btn-shadow py-2">More Info</button>
-                    </div>
-                  </div>
+          <ul class="nav nav-tabs justify-content-center mx-4" id="myTab" role="tablist">
+              <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
+                <button class="nav-link active p-4" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Simple Bookmarking</button>
+              </li>
+              <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
+                <button class="nav-link p-4" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Speedy Searching</button>
+              </li>
+              <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
+                <button class="nav-link p-4" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Easy Sharing</button>
+              </li>
+          </ul>
+          <div class="col-12 pt-5 pe-lg-5 tab-content" id="myTabContent">
+              <!-- Content 1 -->
+              <div class="row d-flex flex-wrap justify-content-center tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+                <div class="col-12 col-lg-6 d-flex flex-wrap justify-content-center img-overlap img-tab">
+                  <img src="img/pill.svg" class="img-move img-left img-bottom img-fluid rotated" loading="lazy" role="presentation">
+                  <img src="img/illustration-features-tab-1.svg" class="img-move w-75" alt="Browser Bookmark" loading="lazy">           
                 </div>
-        </div> 
+                <div class="col-10 col-lg-6 pt-4 px-lg-4 text-center text-lg-start">
+                  <h3 class="fw-bolder fs-2 lh-1 mb-4">Bookmark in one click</h3>
+                  <p class="mb-4 text-black-50 pe-lg-4">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
+                  <button type="button" class="btn btn-primary button-size btn-lg btn-shadow py-2">More Info</button>
+                </div>
+              </div>
+          </div>
+        </div>
 
         <!-- Download -->
-        <div class="row d-flex flex-wrap justify-content-center py-5">
+        <div class="row justify-content-center py-5">
           <div class="col-12 col-lg-9">
-            <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
+            <div class="row row-cols-1 justify-content-center pb-5">
               <div class="col-lg-6 col-10 px-4 py-4 text-center">
                 <h2 class="fw-bolder pb-2">Download the extension</h2>
                 <p class="mb-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
@@ -136,11 +109,11 @@
                         <img src="img/logo-chrome.svg" class="card-img-top py-4 px-3" alt="Chrome Browser">
                       </div>
                       <div class="card-body">
-                        <h3 class="card-title">Add to Chrome</h3>
+                        <h3 class="card-title fw-bolder fs-5">Add to Chrome</h3>
                         <p class="card-text text-black-50"><small>Minimum version 62</small></p>
                         <img src="img/bg-dots.svg" class="img-fluid">
                         <div class="d-grid gap-2 col mx-auto">
-                          <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding mt-2">Add & Install Extenstion</button>
+                          <button type="button" class="btn btn-primary button-size btn-shadow btn-lg btn-padding mt-2">Add & Install Extenstion</button>
                         </div>
                       </div>
                     </div>
@@ -151,11 +124,11 @@
                         <img src="img/logo-firefox.svg" class="card-img-top py-4 px-3" alt="Firefox Browser">
                       </div>
                       <div class="card-body">
-                        <h3 class="card-title">Add to Firefox</h3>
+                        <h3 class="card-title fw-bolder fs-5">Add to Firefox</h3>
                         <p class="card-text text-black-50"><small>Minimum version 62</small></p>
                         <img src="img/bg-dots.svg" class="img-fluid">
                         <div class="d-grid gap-2 col mx-auto">
-                          <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding mt-2">Add & Install Extenstion</button>
+                          <button type="button" class="btn btn-primary button-size btn-shadow btn-lg btn-padding mt-2">Add & Install Extenstion</button>
                         </div>
                       </div>
                     </div>
@@ -166,11 +139,11 @@
                         <img src="img/logo-opera.svg" class="card-img-top py-4" alt="Opera Browser">
                       </div>
                       <div class="card-body">
-                        <h3 class="card-title">Add to Opera</h3>
+                        <h3 class="card-title fw-bolder fs-5">Add to Opera</h3>
                         <p class="card-text text-black-50"><small>Minimum version 62</small></p>
                         <img src="img/bg-dots.svg" class="img-fluid">
                         <div class="d-grid gap-2 col mx-auto">
-                          <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding mt-2">Add & Install Extenstion</button>
+                          <button type="button" class="btn btn-primary button-size btn-shadow btn-lg btn-padding mt-2">Add & Install Extenstion</button>
                         </div>
                       </div>
                     </div>
@@ -183,9 +156,9 @@
         </div> 
 
         <!-- FAQS -->        
-        <div class="row d-flex flex-wrap justify-content-center py-5">
+        <div class="row justify-content-center py-5">
           <div class="col-12 col-lg-4">
-            <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
+            <div class="row row-cols-1 justify-content-center pb-5">
               <div class="col-lg-12 col-10 px-4 py-4 text-center">
                 <h2 class="fw-bolder pb-2">Frequently Asked Questions</h2>
                 <p class="mb-4 text-black-50">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
@@ -241,14 +214,14 @@
                 </div>
              </div>
               <div class="col px-4 py-4 text-center">
-                <button type="button" class="btn btn-primary btn-lg btn-shadow py-2">More Info</button>
+                <button type="button" class="btn btn-primary button-size btn-lg btn-shadow py-2">More Info</button>
               </div>
             </div>
           </div>
         </div>
         
         <!-- BANNER -->        
-        <div class="row bg-primary d-flex flex-wrap justify-content-center p-5 mb-4">
+        <!-- <div class="row bg-primary justify-content-center p-5">
           <div class="col-5 text-center">
             <p class="lead text-uppercase lettering text-white">35,000+ already joined</p>
             <h2 class="fs-3 text-white py-3">Stay up-to-date with what we're doing</h2>
@@ -258,11 +231,11 @@
                 <div class="invalid-feedback">Whoops, make sure it's an email</div>
               </div>
               <div class="col-4 d-flex">
-                <button class="btn btn-secondary btn-lg text-white" type="submit">Contact Us</button>
+                <button class="btn btn-secondary button-size btn-lg text-white" type="submit">Contact Us</button>
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
   </div>
 
     <!-- Bootstrap JavaScript -->
