--- a/nivell2/index.html
+++ b/nivell2/index.html
@@ -226,11 +226,11 @@
             <p class="text-uppercase lettering text-white">35,000+ already joined</p>
             <h2 class="fs-3 text-white py-3">Stay up-to-date with what we're doing</h2>
             <form class="d-grid gap-2 pt-2 needs-validation" id="contactForm">
-              <div class="">
-                <input type="email" class="form-control" placeholder="Enter your email address" aria-label="User Email" id="emailAddress" data-sb-validations="required, email" required>
-                <!-- <div class="invalid-feedback">Whoops, make sure it's an email</div> -->
-                <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
-                <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
+              <div class="position-relative">
+                <div class="has-validation">
+                  <input type="email" class="form-control" placeholder="Enter your email address" aria-label="User Email" id="emailAddress" data-sb-validations="required, email" required>
+                  <div class="invalid-tooltip">Whoops, make sure it's an email</div>
+                </div>
               </div>
               <button class="btn btn-secondary button-size btn-lg btn-shadow py-2 text-white" type="submit">Contact Us</button>
             </form>
@@ -248,6 +248,7 @@
     <!-- Bootstrap JavaScript -->
     <!-- <script src="./node_modules/bootstrap/js/dist/*.js"></script>  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
+    <script src="scripts/validator.js"></script>
+
 </body>
 </html>
