--- a/nivell3/index.html
+++ b/nivell3/index.html
@@ -90,13 +90,13 @@
           </div>
 
           <ul class="nav nav-tabs justify-content-center mx-4" id="myTab" role="tablist">
-            <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
+            <li class="nav-item fullwidth d-flex justify-content-center grey-border-b " role="presentation">
               <button class="nav-link active p-4" id="info1-tab" data-bs-toggle="tab" data-bs-target="#info1" type="button" role="tab" aria-controls="info1" aria-selected="true">Simple Bookmarking</button>
             </li>
-            <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
+            <li class="nav-item fullwidth d-flex justify-content-center grey-border-b " role="presentation">
               <button class="nav-link p-4" id="info2-tab" data-bs-toggle="tab" data-bs-target="#info2" type="button" role="tab" aria-controls="info2" aria-selected="false">Speedy Searching</button>
             </li>
-            <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
+            <li class="nav-item fullwidth d-flex justify-content-center grey-border-b " role="presentation">
               <button class="nav-link p-4" id="info3-tab" data-bs-toggle="tab" data-bs-target="#info3" type="button" role="tab" aria-controls="info3" aria-selected="false">Easy Sharing</button>
             </li>
           </ul>
@@ -322,7 +322,6 @@
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="scripts/validator.js"></script>
-    <script src="scripts/toggler-overlay.js"></script>
 
 </body>
 </html>
